# libSimpleCSS

./: AUTHORS  README.md  buildconf.sh  configure.ac
include/: config.h  config.h.in  scss.h  scss_iconv.h  scss_node.h  scss_sac.h  scss_string.h
src/: Makefile.am  create_node.c  doc.c  dump_nodes.c  iconv.c  ignore_sp.c  main.c  sac.c  starts_with.c  strip_quote.c  trim.c
src/.deps/: libscss_la-create_node.Plo  libscss_la-doc.Plo  libscss_la-dump_nodes.Plo  libscss_la-iconv.Plo  libscss_la-ignore_sp.Plo  libscss_la-main.Plo  libscss_la-sac.Plo  libscss_la-starts_with.Plo  libscss_la-strip_quote.Plo  libscss_la-trim.Plo
test/: Makefile.in  example-1.c
test/unit/charset/: Makefile  test_charset.c
test/unit/fontface/: Makefile  test_fontface.c
test/unit/import/: Makefile  test_import.c
test/unit/media/: Makefile  test_media.c
test/unit/page/: Makefile  test_page.c
test/unit/selector/: Makefile  test_selector.c
